--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="h-full">
   <head>
@@ -7,67 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#1c1917" />
     <title>Winds Meet Assistant</title>
-    <!-- Critical Error Logger: Catches crash before React loads -->
+    <!-- Critical Error Logger -->
     <script>
       window.onerror = function(msg, url, line, col, error) {
-        var box = document.createElement('div');
-        box.style.position = 'fixed';
-        box.style.top = '0';
-        box.style.left = '0';
-        box.style.width = '100%';
-        box.style.backgroundColor = 'red';
-        box.style.color = 'white';
-        box.style.padding = '20px';
-        box.style.zIndex = '999999';
-        box.style.whiteSpace = 'pre-wrap';
-        box.innerText = 'CRITICAL ERROR:\n' + msg + '\n' + url + ':' + line;
-        document.body.appendChild(box);
+        // Only log if the React app hasn't taken over (check for a known element)
+        if (!document.getElementById('root') || document.getElementById('root').innerHTML.includes('Loading App Resources')) {
+            var box = document.createElement('div');
+            box.style.position = 'fixed';
+            box.style.top = '0';
+            box.style.left = '0';
+            box.style.width = '100%';
+            box.style.backgroundColor = 'red';
+            box.style.color = 'white';
+            box.style.padding = '20px';
+            box.style.zIndex = '999999';
+            box.style.whiteSpace = 'pre-wrap';
+            box.innerText = 'CRITICAL STARTUP ERROR:\n' + msg;
+            document.body.appendChild(box);
+        }
         return false;
       };
     </script>
-    <!-- Tailwind CDN: Ensures styles load in Preview/Dev environments even if build step is skipped -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              stone: {
-                50: '#fafaf9',
-                100: '#f5f5f4',
-                200: '#e7e5e4',
-                300: '#d6d3d1',
-                400: '#a8a29e',
-                500: '#78716c',
-                600: '#57534e',
-                700: '#44403c',
-                800: '#292524',
-                900: '#1c1917',
-                950: '#0c0a09',
-              }
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      body {
-        background-color: #1c1917; /* Fallback dark background */
-        color: #e7e5e4;
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "ffish-es6": "https://aistudiocdn.com/ffish-es6@^0.7.8",
-    "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4",
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "url": "https://aistudiocdn.com/url@^0.11.4"
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4",
+    "ffish-es6": "https://aistudiocdn.com/ffish-es6@^0.7.8"
   }
 }
 </script>
@@ -76,7 +46,13 @@
   <body class="bg-stone-900 text-stone-200 overflow-hidden h-full">
     <div id="root" class="h-full w-full flex items-center justify-center">
       <!-- Fallback content if JS fails -->
-      <div class="text-stone-500 animate-pulse font-mono">Loading App Resources...</div>
+      <div class="text-stone-500 animate-pulse font-mono flex flex-col items-center gap-4">
+        <svg class="animate-spin h-8 w-8 text-amber-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+        </svg>
+        <span>Loading App Resources...</span>
+      </div>
     </div>
     <script type="module" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
